--- a/modularity1.html
+++ b/modularity1.html
@@ -157,13 +157,13 @@
 	    		<p class="instruction-text">The lightbox should display arbitrary content, centered vertically and horizontally, with everything behind it (the rest of the page) darkened. It should obscure the entire screen, no matter where you are on the page. You may want to disable these styles when you're not actively working on them, otherwise they'll cover the whole page.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<div>
-			    		<div>
-				    		<div>
+			    	<div class="lBContain">
+			    		<div class="lBFloater">
+				    		<div class="lBWhiteBox">
 					    		<h3>Hello</h3>
 						    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears. Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
-						    	<div>
-						    		<a href="#">Close</a>
+						    	<div id="closeBtn">
+						    		<a href="#" class="closeBtn">Close</a>
 						    	</div>
 				    		</div>
 				    	</div>
