--- a/modularity1.html
+++ b/modularity1.html
@@ -178,7 +178,7 @@
 	    		<p class="instruction-text">A media block is a left-floated image with some content beside it. Think Facebook updates.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<img src="http://placehold.it/50">
+			    	<img src="http://placehold.it/50" class="floatLft">
 			    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    <!-- End editable area -->
 			    </div>
@@ -187,10 +187,10 @@
 
 		    	<!-- Edit here -->
 					<div class="instruction-answer">
-			    	<div>
+			    	<div class="floatLft">
 				    	<img src="http://placehold.it/50">
 				    </div>
-			    	<div>
+			    	<div class="mediaTxt">
 				    	<h2>Cupcake Ipsum</h2>
 				    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 				    </div>
@@ -201,25 +201,25 @@
 
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<div>
+			    	<div class="floatLft">
 				    	<img src="http://placehold.it/50">
 				    </div>
-			    	<div>
+			    	<div class="mediaTxt">
 				    	<h2>Cupcake Ipsum</h2>
 				    	<p>Cupcake ipsum dolor sit amet gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 
-				    	<div>
+				    	<div class="floatLft">
 					    	<img src="http://placehold.it/32">
 					    </div>
-				    	<div>
+				    	<div class="mediaTxt">
 					    	<h2>I like cupcakes!</h2>
 					    	<p>Cupcake ipsum dolor sit amet caramels jelly beans. Faworki donut applicake cookie. Apple pie wafer gummies biscuit cupcake gummies pastry.</p>
 					    </div>
 
-				    	<div>
+				    	<div class="floatLft">
 					    	<img src="http://placehold.it/32">
 					    </div>
-				    	<div>
+				    	<div class="mediaTxt">
 					    	<h2>I like cupcakes, too!</h2>
 					    	<p>Cupcake ipsum dolor sit amet donut lemon drops carrot cake topping bonbon powder sweet roll. Lollipop jujubes bonbon chupa chups jelly beans.</p>
 					    </div>
